--- a/planOit/Assembly-CSharp.csproj
+++ b/planOit/Assembly-CSharp.csproj
@@ -61,8 +61,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\EventManager.cs" />
     <Compile Include="Assets\Scripts\moveCamera.cs" />
-    <Compile Include="Assets\Scripts\planet.cs" />
+    <Compile Include="Assets\Scripts\Planet.cs" />
     <Compile Include="Assets\Scripts\PlanetGenerator.cs" />
     <Compile Include="Assets\Scripts\PlayerState.cs" />
     <Compile Include="Assets\Scripts\ResourceSet.cs" />
